# fuel-ev-in

./: .env.example  .gitignore  .ic-assets.json  .ic-assets.json5  2  Cargo.toml  README.md  Readme  Readme.md  Trunk.toml  build.rs  canister_ids.json  default.nix  dfx.json  index.html  rust-toolchain.toml  tailwind.config.js  tailwind.css
.cargo/: config.toml
.dfx/local/: canister_ids.json  network-id
.dfx/playground/: canister_ids.json  canister_timestamps.json
.github/workflows/: deploy.yml
did/: backend.did  canister_ids.json
scripts/: build.sh  local_deploy.sh
src/: app.rs  base_route.rs  error_template.rs  main.rs
src/auth/: mod.rs
src/components/: advantages.rs  base_route.rs  best_placed_for_trips.rs  car_tile.rs  checkout_page.rs  date_time_picker.rs  footer.rs  get_in_touch.rs  header.rs  home_banner.rs  invest_in_car.rs  mod.rs  payment.rs  search.rs  search_date_time.rs  skeleton_cards.rs  stay_in_the_know.rs
src/consts/: local.rs  mod.rs  remote.rs
src/models/: mod.rs
src/state/: canisters.rs  checkout_state.rs  mod.rs
src/utils/: ic.rs  input.rs
ssr/: .env  Cargo.toml  build.rs  tailwind.config.js
ssr/did/: backend.did  canister_ids.json
ssr/src/: app.rs  init.rs  lib.rs  main.rs
ssr/src/auth/: mod.rs
ssr/src/auth/server_impl/: mod.rs
ssr/src/components/: advantages.rs  auth_cans_provider.rs  base_route.rs  best_placed_for_trips.rs  car_tile.rs  checkout_page.rs  date_time_picker.rs  footer.rs  get_in_touch.rs  home_banner.rs  invest_in_car.rs  mod.rs  overlay.rs  search.rs  search_date_time.rs  skeleton_cards.rs
ssr/src/consts/: mod.rs  remote.rs
ssr/src/state/: canisters.rs  checkout_state.rs  mod.rs
ssr/src/utils/: ic.rs  input.rs  mod.rs  parent_resource.rs  time.rs
style/: output.css  tail.css  tailwind1.css
